--- a/internal/generator/templates/models/models.tmpl
+++ b/internal/generator/templates/models/models.tmpl
@@ -1,8 +1,9 @@
 package models
 
 {{ if .Description }} {{- .Description }} {{ end }}
-type {{ .ModelName }} struct {
+type {{ .ModelName }}DTO struct {
     {{ range $fieldName := .PropKeys -}}
-        {{ upFirst $fieldName }} string
+        {{- $field := getField $fieldName $.Properties }}
+        {{ upFirst $fieldName }} {{ getDtoFieldType $field }} `json:"{{ $fieldName }}"` {{ if $field.Description -}} // {{ $field.Description }} {{- end }}
     {{ end }}
 }
