--- a/internal/generator/templates/layer/service/generated.tmpl
+++ b/internal/generator/templates/layer/service/generated.tmpl
@@ -1,15 +1,25 @@
-package {{ .Tag }}
+package generated
 
 import (
-    "{{ getRootFolderPath }}/internal/models"
+     {{ .Tag }}Repository "{{ getRootFolderPath }}/internal/database/repositories/{{ .Tag }}"
+     "{{ getRootFolderPath }}/internal/models"
 )
 
+type ServiceImpl struct {
+	Repo {{ .Tag }}Repository.Repository
+}
+
+func NewService(repo {{ .Tag }}Repository.Repository) *ServiceImpl {
+	return &ServiceImpl{
+		Repo: repo,
+	}
+}
+
 {{ $paths := index $.Data.Tags .Tag }}
-type Service interface {
-    {{ range $paths -}}
-        {{ range .Operations -}}
+{{ range $paths -}}
+    {{ range .Operations -}}
             //{{ if or (ne .Summary "") (ne .Description "") }} {{ upFirst .OperationId }} - Summary: {{ .Summary }}. Description: {{ .Description }} {{ end }}
-            {{ upFirst .OperationId }}(
+            func (s *ServiceImpl) {{ upFirst .OperationId }}(
                {{- if .RequestBody }}
                     {{- $modelName := .RequestBody.Content.ModelName }}
                     {{ if .RequestBody.IsArray -}}
@@ -22,7 +32,8 @@ type Service interface {
                     {{ $type := convertToGoType .Type .Format }}
                     {{ .Name }} {{ if .IsArray }} []{{ $type }} {{ else }} {{ $type }} {{ end }}, // Required: {{ .Required }}, Description: {{ .Description }}
                {{- end }}
-            ) {{ getResponse . }}
-        {{ end -}}
-    {{ end }}
-}
+            ) {{ getResponse . }} {
+                panic("not implemented")
+            }
+    {{ end -}}
+{{ end }}
