--- a/internal/generator/templates/layer/controller/interface.tmpl
+++ b/internal/generator/templates/layer/controller/interface.tmpl
@@ -12,7 +12,7 @@ type Controller interface {
         {{ range .Operations -}}
             //{{ if or (ne .Summary "") (ne .Description "") }} {{ upFirst .OperationId }} - Summary: {{ .Summary }}. Description: {{ .Description }} {{ end }}
             {{ upFirst .OperationId }}(
-               w http.ResponseWriter, r *http.Request) error
+               w http.ResponseWriter, r *http.Request)
         {{ end -}}
     {{ end }}
 }
