--- a/internal/generator/templates/layer/repository/interface.tmpl
+++ b/internal/generator/templates/layer/repository/interface.tmpl
@@ -1,7 +1,12 @@
 package {{ .Tag }}
 
+{{- $dpList := getTagDependencies .Tag }}
 import (
-    "{{ getRootFolderPath }}/internal/models"
+    {{- if gt (len $dpList ) 0 }}
+        {{- range $idx, $el := $dpList }}
+            "{{ getRootFolderPath }}/internal/models/{{ $el }}"
+        {{- end }}
+    {{- end }}
     "{{ getRootFolderPath }}/internal/database/repositories/{{ .Tag }}/custom"
     "gorm.io/gorm"
     "context"
@@ -17,9 +22,9 @@ type Repository interface {
                {{- if .RequestBody }}
                     {{- $modelName := .RequestBody.Content.ModelName }}
                     {{ if .RequestBody.IsArray -}}
-                        {{ lowFirst $modelName }}DTO []*models.{{ $modelName }}DTO, // {{ .Description }}
+                        {{ lowFirst $modelName }}DTO []*{{ lowFirst $modelName }}.{{ $modelName }}DTO, // {{ .Description }}
                     {{ else -}}
-                        {{ lowFirst $modelName }}DTO *models.{{ $modelName }}DTO,
+                        {{ lowFirst $modelName }}DTO *{{ lowFirst $modelName }}.{{ $modelName }}DTO,
                     {{- end }}
                {{- end }}
                {{- range .Parameters -}}
