--- a/internal/generator/templates/common/main.tmpl
+++ b/internal/generator/templates/common/main.tmpl
@@ -3,6 +3,7 @@ package main
 import (
     "github.com/gorilla/mux"
     "net/http"
+    "fmt"
     "{{ getRootFolderPath }}/configs/database/postgres"
     {{ range $tag, $paths := .Tags }}
         {{ $tag }}RepoImport "{{ getRootFolderPath }}/internal/database/repositories/{{ $tag }}"
@@ -32,6 +33,8 @@ func main() {
     	Addr:    "127.0.0.1:8080",
     	Handler: r,
     }
+
+    fmt.Printf("-----------------------------------------------------------\nApplication is running!\n-----------------------------------------------------------")
 
     if err := srv.ListenAndServe(); err != nil {
     	panic(err)
