--- a/internal/generator/templates/layer/service/interface.tmpl
+++ b/internal/generator/templates/layer/service/interface.tmpl
@@ -1,7 +1,12 @@
 package {{ .Tag }}
 
+{{- $dpList := getTagDependencies .Tag }}
 import (
-    "{{ getRootFolderPath }}/internal/models"
+    {{- if gt (len $dpList ) 0 }}
+        {{- range $idx, $el := $dpList }}
+            "{{ getRootFolderPath }}/internal/models/{{ $el }}"
+        {{- end }}
+    {{- end }}
     "{{ getRootFolderPath }}/internal/service/{{ .Tag }}/custom"
     {{ .Tag }}Repository "{{ getRootFolderPath }}/internal/database/repositories/{{ .Tag }}"
     "context"
@@ -17,9 +22,9 @@ type Service interface {
                {{- if .RequestBody }}
                     {{- $modelName := .RequestBody.Content.ModelName }}
                     {{ if .RequestBody.IsArray -}}
-                        {{ lowFirst $modelName }}DTO []*models.{{ $modelName }}DTO, // {{ .Description }}
+                        {{ lowFirst $modelName }}DTO []*{{ lowFirst $modelName }}.{{ $modelName }}DTO, // {{ .Description }}
                     {{ else -}}
-                        {{ lowFirst $modelName }}DTO *models.{{ $modelName }}DTO,
+                        {{ lowFirst $modelName }}DTO *{{ lowFirst $modelName }}.{{ $modelName }}DTO,
                     {{- end }}
                {{- end }}
                {{- range .Parameters -}}
